# chat-automation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEBUG.md  FIXES_APPLIED.md  FIX_ALL_ISSUES.md  FIX_NOTIMPLEMENTEDERROR.md  HOW_TO_DEBUG.md  IMPLEMENTATION_SUMMARY.md  LATEST_FIXES.md  POSTGRES_PERSISTENCE_TODO.md  QUICK_FIX_NOW.md  QUICK_FIX_SUMMARY.md  README.md  RESTART_GUIDE.md  TEST_APPROVAL.md  check_langgraph_tables.sql  docker-compose.yml  package.json  pnpm-lock.yaml  start-all.sh
apps/agent/: Dockerfile  entrypoint.sh  package.json  pyproject.toml  sst.config.ts
apps/agent/chat/: .env.example  pyproject.toml  sst.pyi  start-mcp-server.sh
apps/agent/chat/src/chat/: __init__.py  api.py  classifier.py  graph.py  integration_config.yaml  integration_registry.py  nodes.py  prompts.py  schemas.py  service.py  workflow_graph.py  workflow_nodes.py  workflow_schemas.py  workflow_service.py
apps/agent/chat/src/chat/utils/: __init__.py  mcp_client.py
apps/agent/chat/tests/: conftest.py  test_artifacts.py  test_classifier.py  test_smart_router.py
apps/api/: .env.example  Dockerfile  Dockerfile.dev  package.json  tsconfig.json
apps/api/src/: index.ts
apps/web/: .env.example  Dockerfile  components.json  middleware.ts  next.config.mjs  package.json
apps/web/app/: page.tsx
apps/web/components/: app-sidebar.tsx  auth-provider.tsx  chat-greeting.tsx  chat-input copy.tsx  chat-input.tsx  chat-messages.tsx  document-preview-card.tsx  nav-chats.tsx  new-chat-input.tsx  planetary-background.tsx  providers.tsx  search-results-list.tsx  shooting-stars-and-star-background.tsx  thinking-indicator.tsx  timeline.tsx  workflow-debug.tsx  workflow-timeline.tsx
apps/web/lib/: trpc.ts  (+2 more)
nginx/: Dockerfile  nginx.conf
(+45 files in other folders)
